removed extra files

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<meta name="description" content="">
 		<title>FreshEase</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
 	</head>
 	<body class="home-body">
 		<header class="main-hero">
@@ -17,7 +17,7 @@
 						<i class="glyphicon glyphicon-leaf"></i>
 						FreshEase
 					</a>
-					<button type="button" class="navbar-toggle" 
+					<button type="button" class="navbar-toggle"
 						data-toggle="collapse"
 						data-target=".navbar-collapse">
 						<span class="sr-only">Toggle Menu Navigation</span>
@@ -25,11 +25,10 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-				</div>	
+				</div>
 				<ul class="nav navbar-nav navbar-right navbar-collapse collapse">
 					<li><a href="#">Home</a></li>
 					<li><a href="menu.html">Menu</a></li>
-					<li><a href="#">About</a></li>
 				</ul>
 			</div>
 			<div class="hero-content-wrapper">
@@ -50,10 +49,10 @@
 							Some text section header
 						</h2>
 						<p>
-							This will be content about the QSR. Basic info, more detailed items will be expanded in the about page. Healhty eating is important, you are busy, let us help, etc.	
+							This will be content about the QSR. Basic info, more detailed items will be expanded in the about page. Healhty eating is important, you are busy, let us help, etc.
 						</p>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi a lorem id purus semper rhoncus. Aenean eu hendrerit erat. Praesent ac tincidunt mi, in egestas nunc. Aenean sodales nisi ut nibh mollis lobortis. Vestibulum eget dolor dapibus, bibendum neque nec, scelerisque enim. Vivamus ultrices sem sed ex commodo bibendum. 
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi a lorem id purus semper rhoncus. Aenean eu hendrerit erat. Praesent ac tincidunt mi, in egestas nunc. Aenean sodales nisi ut nibh mollis lobortis. Vestibulum eget dolor dapibus, bibendum neque nec, scelerisque enim. Vivamus ultrices sem sed ex commodo bibendum.
 						</p>
 					</div>
 				</div>
@@ -64,7 +63,7 @@
 			</main>
 		<footer class="footer-wrapper">
 		</footer>
-		<script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>	
+		<script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
