--- a/menu.html
+++ b/menu.html
@@ -6,8 +6,8 @@
     	<meta name="viewport" content="width=device-width, initial-scale=1">
     	<meta name="description" content="">
 		<title></title>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
 	</head>
 	<body id="menu-body">
 		<header>
@@ -16,7 +16,7 @@
 					<a href="" class="navbar-brand">	<i class="glyphicon glyphicon-leaf"></i>
 						FreshEase
 					</a>
-					<button type="button" class="navbar-toggle" 
+					<button type="button" class="navbar-toggle"
 						data-toggle="collapse"
 						data-target=".navbar-collapse">
 						<span class="sr-only">Toggle Menu Navigation</span>
@@ -24,11 +24,10 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-				</div>	
+				</div>
 				<ul class="nav navbar-nav navbar-right navbar-collapse collapse">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="#">Menu</a></li>
-					<li><a href="#">About</a></li>
 				</ul>
 			</div>
 		</header>
@@ -41,7 +40,7 @@
 					<h2>
 						Juices
 					</h2>
-				</div>	
+				</div>
 				<div class="row">
 					<div class="col-md-3 col-sm-3">
 						<h4>
@@ -75,7 +74,7 @@
 							Ginger, Pear, Lemon, Cayenne
 						</p>
 					</div>
-				</div>	
+				</div>
 				<div class="row">
 					<div class="col-md-3 col-md-offset-1 col-sm-3 col-sm-offset-1">
 						<h4>
@@ -90,7 +89,7 @@
 							ABC
 						</h4>
 						<p>
-							Apple, Beet, Celery 
+							Apple, Beet, Celery
 						</p>
 					</div>
 					<div class="col-md-3 col-sm-4">
@@ -101,7 +100,7 @@
 							Banana, Cinnamon, Yogurt
 						</p>
 					</div>
-				</div>	
+				</div>
 				<div class="row row-margin">
 					<h2>
 						Bowls
@@ -133,7 +132,7 @@
 							Quinoa, Avocado, Chicken, Tzatziki Sauce
 						</p>
 					</div>
-				</div>	
+				</div>
 				<div class="row row-margin">
 					<h2>
 						Salads
@@ -172,7 +171,7 @@
 							Romaine, Parmesan, Whole Wheat Croutons, Chicken, Creamy Caeser
 						</p>
 					</div>
-				</div>	
+				</div>
 				<div class="row row-margin">
 					<h2>
 						Wraps
@@ -197,12 +196,12 @@
 						</p>
 					</div>
 				</div>
-			</div>	
+			</div>
 		</main>
 		<footer>
 		</footer>
-		<script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>	
+		<script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/index.js"></script>	
+		<script type="text/javascript" src="js/index.js"></script>
 	</body>
-</html>	
+</html>
