removed extra js

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 				<div class="main-section1">
 					<div class="section-content">
 						<h2>
-							Some text section header
+							Eat better. Be better.
 						</h2>
 						<p>
-							This will be content about the QSR. Basic info, more detailed items will be expanded in the about page. Healhty eating is important, you are busy, let us help, etc.
+							We know that eating right can help you stay fit and and healthy.
 						</p>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi a lorem id purus semper rhoncus. Aenean eu hendrerit erat. Praesent ac tincidunt mi, in egestas nunc. Aenean sodales nisi ut nibh mollis lobortis. Vestibulum eget dolor dapibus, bibendum neque nec, scelerisque enim. Vivamus ultrices sem sed ex commodo bibendum.
